# mod_aby_emu

./: CMakeLists.txt
debug_files/: aby_emu-models.cfg  aby_emu.cfg
packaging/configs/sharemind/: aby_emu.conf
packaging/configs/sharemind/conf.d/: mod-aby_emu.conf
packaging/debian/: conffiles
src/: AbyConfiguration.cpp  AbyConfiguration.h  AbyModule.cpp  AbyModule.h  AbyPD.cpp  AbyPD.h  AbyPDPI.cpp  AbyPDPI.h  ValueTraits.h  mod_aby_emu.cpp
src/Syscalls/: Common.h  CoreSyscalls.h  Meta.h
